--- a/src/css/Hourly.css
+++ b/src/css/Hourly.css
@@ -88,5 +88,6 @@ svg {
 
   .boxy-hourly {
     width: 100px;
+    margin-top: 25px;
   }
 }
